--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,12 @@ section {
   width: 550px;
   display: inline-block;
   margin-left: 30px;
+  background-image: url("http://assets.inhabitat.com/wp-content/blogs.dir/1/files/2013/11/mangrove-forest.jpg")
 }
 
 
 .deck1,.deck2{
+  border-radius: 25px;
   background-color: moccasin;
   height: 160px;
   width: 160px;
@@ -28,23 +30,29 @@ section {
 }
 
 .deckC{
+  box-shadow: 10px 10px 5px  #00061a;
+  border-radius: 25px;
  display: inline-block;
- border: solid 1px red;
+ border: solid 1px black;
   width: 160px;
   height: 160px;
   background: red;
   margin-left: 15px;
+  background-image: url("http://25.media.tumblr.com/1c96f268d91ebb98e130ce055b9116ce/tumblr_mzry95FE0o1sdgpnmo5_250.png")
 
 
 }
 
 .deckP{
+  box-shadow: 10px 10px 5px  #00061a;
+  border-radius: 25px;
   display: inline-block;
-  border: solid 1px red;
+  border: solid 1px black;
   width: 160px;
   height: 160px;
   background: red;
   margin-left: 15px;
+  background-image: url("http://whysoblu.com/wp-content/uploads/2015/03/Spirited-Away.jpg")
   }
 
 .rock {
