--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
   display: inline-block;
   float: left;
   margin-top: 250px;
+  border-radius: 25px;
 
 }
 
@@ -19,6 +20,7 @@ section {
   display: inline-block;
   margin-left: 30px;
   background-image: url("http://assets.inhabitat.com/wp-content/blogs.dir/1/files/2013/11/mangrove-forest.jpg")
+
 }
 
 
@@ -119,4 +121,14 @@ overflow:hidden;}
 }
 
 
+
+/*random*/
+span {
+    display: inline-block;
+    position: absolute;
+    color: white;
+    font-size: 30px;
+    font-family: 'Lobster', cursive;
+
+}
 
